force-app/main/default/objects/Outcome_Configuration__c/Outcome_Configuration__c.object-meta.xml
<CustomObject>
    <description>ExP OM: Defines how an Outcome is generated.</description>
    <label>Outcome Configuration</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>