force-app/main/default/objects/Outcome_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this configuration is in use. If set to false, then no new outcomes will be generated for this configuration. If set to true, then this configuration will be actively in play for outcome generation.</description>
    <inlineHelpText>Whether or not this configuration is in use. If set to false, then no new outcomes will be generated for this configuration. If set to true, then this configuration will be actively in play for outcome generation.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>