force-app/main/default/objects/Outcome_Configuration__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this configuration can be changed. A configuration becomes locked as soon as any outcome associated with it is locked.</description>
    <inlineHelpText>Whether or not this configuration can be changed. A configuration becomes locked as soon as any outcome associated with it is locked.</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>