force-app/main/default/objects/Outcome_Configuration__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outcome Type</label>
    <referenceTo>Outcome_Type__c</referenceTo>
    <relationshipLabel>Outcome Configurations</relationshipLabel>
    <relationshipName>Outcome_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>