force-app/main/default/objects/Outcome_Configuration__c/fields/Parent_sObject__c.field-meta.xml
<CustomField>
    <fullName>Parent_sObject__c</fullName>
    <description>The name of the sObject that the generated Outcome__c will be a child of; for example, Case_Record__c</description>
    <inlineHelpText>The name of the sObject that the generated Outcome__c will be a child of; for example, Case_Record__c</inlineHelpText>
    <label>Parent sObject</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>